<resources xmlns:tools="http://schemas.android.com/tools" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="toolbar_navigation_close_description">Close</string>
    <string name="app_name">MaterialDesign</string>
    <string name="cat_toc_buttons">Buttons</string>
    <string name="cat_buttons_toggle_group">Buttons Toggle Group</string>
    <string name="cat_buttons_title">Buttons</string>
    <string name="cat_buttons_description">
    Buttons communicate the action that will occur when the user touches them.
    They may display text, imagery, or both.
    Flat buttons and raised buttons are the most commonly used types.
  </string>
    <string name="cat_button_label_enabled">Enabled</string>
    <string name="cat_button_label_disabled">Disabled</string>
    <string name="cat_button_icon_btn_text">Icon only button</string>
    <string name="cat_btn_text">Material button</string>
    <string name="cat_unelevated_btn_text">Unelevated button</string>
    <string name="cat_text_btn_text">Text button</string>
    <string name="cat_stroked_btn_text">Stroked button</string>
    <string name="cat_icon_btn_text">Icon button</string>
    <string name="cat_icon_text_btn_text">Icon text button</string>
    <string name="cat_filled_buttons_section_title">Filled buttons</string>
    <string name="cat_outlined_btn_text">Outlined buttons</string>
    <string name="cat_outlined_icon_btn_text">Icon only buttons</string>
    <string name="cat_icon_btn_default_style">Standard</string>
    <string name="cat_standard_icon_btn_desc" description="Description for standard icon only button. [CHAR LIMIT=NONE]">Standard Icon</string>
    <string name="cat_icon_btn_filled_style">Filled</string>
    <string name="cat_filled_icon_btn_desc" description="Description for filled icon only button. [CHAR LIMIT=NONE]">Filled Icon</string>
    <string name="cat_icon_btn_filled_tonal_style">Tonal</string>
    <string name="cat_filled_tonal_icon_btn_desc" description="Description for filled tonal icon only button. [CHAR LIMIT=NONE]">Tonal Icon</string>
    <string name="cat_icon_btn_outlined_style">Outlined</string>
    <string name="cat_outlined_icon_btn_desc" description="Description for outlined icon only button. [CHAR LIMIT=NONE]">Outlined Icon</string>
    <string name="cat_button_label_toggleable_icon_buttons" description="A label for Toggleable Icon Buttons switch. [CHAR LIMIT=NONE]">Toggleable Icon Buttons</string>
    <string name="cat_button_clicked">Button clicked</string>
    <string name="cat_snackbar_action_button_text">Done</string>
    <string name="cat_single_select">Single-select</string>
    <string name="cat_single_select2">Single-select with orientation</string>
    <string name="cat_multi_select">Multi-select</string>
    <string name="cat_icon_only">Icon only</string>
    <string name="cat_button_label_private">Private</string>
    <string name="cat_button_label_team">Team</string>
    <string name="cat_button_label_everyone">Everyone</string>
    <string name="cat_button_label_custom">Custom</string>
    <string name="cat_button_label_cheese">Cheese</string>
    <string name="cat_button_label_tomatoes">Tomatoes</string>
    <string name="cat_button_label_mushrooms">Mushrooms</string>
    <string name="cat_icon_button_label_paint_bucket" description="A label for an icon-only button [CHAR LIMIT=NONE]">Paint bucket icon</string>
    <string name="cat_icon_button_label_plus" description="A label for an icon-only button [CHAR LIMIT=NONE]">Plus icon</string>
    <string name="cat_icon_button_label_components" description="A label for an icon-only button [CHAR LIMIT=NONE]">Components icon</string>
    <string name="cat_icon_button_label_accelerator" description="A label for an icon-only button [CHAR LIMIT=NONE]">Accelerator icon</string>
    <string name="cat_icon_button_label_dialog" description="A label for an icon-only button [CHAR LIMIT=NONE]">Dialog icon</string>
    <string name="cat_button_require_selection" translatable="false">Require Selection</string>
    <string name="cat_button_vertical_orientation" translatable="false">Vertical Orientation</string>
    <string name="cat_button_enable" translatable="false">Enabled</string>
    <string name="cat_bottomappbar_title">Bottom App Bar</string>
    <string name="cat_bottomappbar_description">
    A bottom app bar provides a docked bar at the bottom of the screen for common application
    actions. The bottom app bar includes a floating button for a primary action and a navigation bar
    area for secondary actions.
  </string>
    <string name="cat_bottomappbar_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."</string>
    <string name="cat_bottomappbar_center">Center</string>
    <string name="cat_bottomappbar_fab_hide">Hide Fab</string>
    <string name="cat_bottomappbar_fab_show">Show Fab</string>
    <string name="cat_bottomappbar_scroll_hide" description="Name of the FAB Hide on Scroll Mode switch [CHAR_LIMIT=NONE]">Hide bottom app bar on scroll</string>
    <string name="cat_bottomappbar_fab_anim_scale">Scale fab</string>
    <string name="cat_bottomappbar_fab_anim_slide">Slide fab</string>
    <string name="cat_bottomappbar_fab_circle">Circle</string>
    <string name="cat_bottomappbar_fab_diamond">Diamond</string>
    <string name="cat_bottomappbar_end">End</string>
    <string name="cat_bottomappbar_3d">3D</string>
    <string name="cat_bottomappbar_accelerator">Accelerator</string>
    <string name="cat_bottomappbar_search">Search</string>
    <string name="cat_bottomappbar_dashboard">Dashboard</string>
    <string name="cat_bottomappbar_navigation_button_content_description">Show navigation drawer</string>
    <string name="cat_bottomappbar_fab_button_content_description">FAB</string>
    <string name="cat_bottomappbar_fab_alignment_mode" description="Name of the FAB Alignment Mode toggle button group [CHAR_LIMIT=NONE]">Fab Alignment Mode</string>
  <string name="cat_transition_card_title">Title</string>
  <string name="cat_transition_lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a, ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae, molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor bibendum, vel congue leo egestas.\n\n
Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel, molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula, in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque est.\n\n
Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh. Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc, quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus convallis.\n\n
Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper, libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim."</string>
  <string name="cat_transition_title_content_desc">Sample title</string>
  <string name="cat_transition_body_content_desc">Sample body text</string>
  <string name="cat_transition_image_content_desc">Sample header image</string>
</resources>