<?xml version="1.0" encoding="utf-8"?>

<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

  <ScrollView
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">
      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="16dp"
          android:paddingBottom="8dp"
          android:text="@string/cat_single_select"
          android:textAppearance="?attr/textAppearanceSubtitle1"/>

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          app:singleSelection="true">

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_private" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_team" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_everyone" />

        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_custom" />
      </com.google.android.material.button.MaterialButtonToggleGroup>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="16dp"
          android:paddingBottom="8dp"
          android:text="@string/cat_multi_select"
          android:textAppearance="?attr/textAppearanceSubtitle1"/>

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_cheese"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_tomatoes"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cat_button_label_mushrooms"/>
      </com.google.android.material.button.MaterialButtonToggleGroup>

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:paddingTop="16dp"
          android:paddingBottom="8dp"
          android:text="@string/cat_icon_only"
          android:textAppearance="?attr/textAppearanceSubtitle1"/>

      <com.google.android.material.button.MaterialButtonToggleGroup
          android:id="@+id/icon_only_group"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content">
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/mtrl_min_touch_target_size"
            android:contentDescription="@string/cat_icon_button_label_paint_bucket"
            app:icon="@drawable/ic_colors_24px"
            app:iconPadding="0dp"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/mtrl_min_touch_target_size"
            android:contentDescription="@string/cat_icon_button_label_plus"
            app:icon="@drawable/ic_fab_24px"
            app:iconPadding="0dp"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/mtrl_min_touch_target_size"
            android:contentDescription="@string/cat_icon_button_label_components"
            app:icon="@drawable/ic_components_24px"
            app:iconPadding="0dp"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/mtrl_min_touch_target_size"
            android:contentDescription="@string/cat_icon_button_label_accelerator"
            app:icon="@drawable/ic_accelerator_24px"
            app:iconPadding="0dp"/>
        <Button
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="@dimen/mtrl_min_touch_target_size"
            android:contentDescription="@string/cat_icon_button_label_dialog"
            app:icon="@drawable/ic_dialogs_24px"
            app:iconPadding="0dp"/>
      </com.google.android.material.button.MaterialButtonToggleGroup>

      <com.google.android.material.materialswitch.MaterialSwitch
          android:id="@+id/switch_enable"
          android:paddingTop="16dp"
          android:layout_width="wrap_content"
          android:layout_height="match_parent"
          android:layout_gravity="center"
          android:checked="true"
          android:enabled="true"
          android:text="@string/cat_button_enable" />

    </LinearLayout>

  </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
