<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/root"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  tools:targetApi="lollipop">

  <include layout="@layout/transition_list_fragment" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/start_fab"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:layout_gravity="bottom|end"
    app:srcCompat="@drawable/ic_add_24px" />

  <com.google.android.material.card.MaterialCardView
    android:id="@+id/expanded_card"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginVertical="80dp"
    android:layout_marginHorizontal="16dp"
    android:layout_gravity="center"
    android:padding="16dp"
    android:backgroundTint="?attr/colorSurface"
      android:visibility="gone" >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

      <ImageView
          android:layout_width="match_parent"
          android:layout_height="100dp"
          android:background="@android:color/white"
          android:contentDescription="@string/cat_transition_image_content_desc"
          android:scaleType="centerCrop"
          app:backgroundTint="@color/purple_200" />

      <TextView
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:textAppearance="?attr/textAppearanceHeadline6"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginTop="8dp"
          android:layout_marginBottom="8dp"
          android:text="@string/cat_transition_card_title"
          android:contentDescription="@string/cat_transition_title_content_desc" />

      <TextView
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginStart="16dp"
          android:layout_marginEnd="16dp"
          android:layout_marginBottom="16dp"
          android:maxLines="6"
          android:text="@string/cat_transition_lorem_ipsum"
          android:contentDescription="@string/cat_transition_body_content_desc"/>
    </LinearLayout>

  </com.google.android.material.card.MaterialCardView>

  <include layout="@layout/transition_container_transform_contact_card" />

</FrameLayout>
